[package]
name = "cuckoocache"
description = "High performance concurrent cache"
version = "0.1.2"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
license = "MPL-2.0"
categories = ["algorithms"]
repository = "https://github.com/JeremyRubin/cuckoocache"

[dependencies]


[dev-dependencies]
rand = "0.5.5"
sha2 = "0.8.0"
